--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,85 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 1rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.flex-con {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  min-height: 90vh;
+  flex-direction: column;
+}
+
+.login-form {
+  max-width: 500px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.login-form input {
+  height: 40px;
+  max-width: 320px;
+  padding: 0 10px;
+  font-size: 16px;
+  width: 100%;
+}
+
+.login-form button,
+.logout-button button {
+  margin-top: 1rem;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 600;
+  border: none;
+  /* background-color: #e65100; */
+  background-color: #ef6c00;
+  border-radius: 4px;
+  box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.15);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.class-card-container {
+  max-width: 400px;
+  width: 100%;
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.class-card-con {
+  border: 1px solid rgba(0, 0, 0, 0.6);
+  border-radius: 6px;
+  padding: 10px;
+  width: 100%;
+  margin: 1rem 0;
+}
+
+.class-card-con > div {
+  margin: 1rem 0;
+}
+
+.class-card-con p {
+  font-size: 17px;
+}
+
+.logout-button {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 3rem;
+}
+
+.logout-button button {
+  background-color: #c62828;
 }
